[gd_scene load_steps=5 format=2]

[ext_resource path="res://tools/Constructor/Constructor.gd" type="Script" id=1]
[ext_resource path="res://tools/Constructor/AreaConstruct.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[node name="Constructor" type="Area" groups=[
"constructor",
]]
collision_layer = 32
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Base" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.00933492, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Areas" type="Spatial" parent="."]

[node name="AreaBottomS" parent="Areas" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.25 )

[node name="AreaBottomW" parent="Areas" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, -0.25 )

[node name="AreaBottomN" parent="Areas" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.25, -0.25 )

[node name="AreaBottomE" parent="Areas" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.25, 0.25 )
[connection signal="area_exited" from="." to="." method="_on_Constructor_area_exited"]
